<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- System -->
    <string name="app_name">IHome</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="error_unknow_exit">未知错误，即将退出!</string>
    <string name="act_welcome">Welcome</string>
    <string name="act_login">Login</string>
    <string name="act_request">Request</string>
    <string name="act_response">Response</string>
    <string name="act_community">Community</string>

    <!-- IMAGEVIEW [Desc] -->
    <string name="imageview_arrow_desc">arrow_desc</string>
    <string name="imageview_icon_desc">icon_desc</string>
    <string name="scroll_unknow_desc">scrollview_unknow_desc</string>
  
    <!-- ACT [Login] -->   
    <string name="act_login_account">10000</string>
    <string name="act_login_passwd">10000</string>
    <string name="act_login_login_server">登陆</string>
    <string name="act_login_remember_passwd">记住密码</string>
    <string name="act_login_more">更多</string>

    <!-- ACT [Request] -->

    <string name="act_request_online">在线</string>
    <string name="act_request_local">本地</string>
    <string name="act_request_loading">加载中...</string>

    <!-- ACT [Response] -->
    <string name="act_response_answer">接听</string>
    <string name="act_response_reject">挂断</string>

    <!-- ACT [Settings] -->
    <string name="act_settings_title_setting">设置</string>
    <string name="act_settings_item_bmpshow">图片展示</string>
    <string name="act_settings_item_push">优先流畅</string>
    <string name="act_settings_item_clear">清除缓存</string>
    <string name="act_settings_item_help">使用帮助</string>
    <string name="act_settings_item_about">关于</string>
    <string name="act_settings_item_update">软件更新</string>
    <string name="act_settings_item_feedback">意见反馈</string>

    <!-- NOTIFY [STATUSBAR] -->
    <string name="status_notify_incomming">来电!</string>

</resources>