<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fcf="http://schemas.android.com/apk/res/com.tpad.ihome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/view_request_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="@dimen/request_titletop_padding" >

        <ImageView
            android:id="@+id/img_request_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_ihome_txtlogo" />

        <!--
             <com.tpadsz.ihome.singleradio.CustomCheckBox
            android:id="@+id/imgbtn_request_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:button="@drawable/ic_request_turn_on" />
        -->

        <ImageButton
            android:id="@+id/imgbtn_request_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_request_turn_on" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/radiogp_request_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_request_top"
        android:orientation="horizontal"
        android:padding="@dimen/request_radiogp_padding" >

        <RadioButton
            android:id="@+id/radio_request_online"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/act_request_online" />

        <RadioButton
            android:id="@+id/radio_request_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/act_request_local" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/view_request_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiogp_request_group" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <ProgressBar
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/act_request_loading" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view_request_content"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/view_request_loading" >

        <com.tpadsz.ihome.fancycoverflow.FancyCoverFlow
            android:id="@+id/cf_request_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            fcf:maxRotation="45"
            fcf:scaleDownGravity="0.5"
            fcf:unselectedAlpha="0.3"
            fcf:unselectedSaturation="0.0"
            fcf:unselectedScale="0.4" />
    </RelativeLayout>

</RelativeLayout>